WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306372
REGRESSION (
303055@main
): Intersection Observer fails with zoomed visual viewport
https://bugs.webkit.org/show_bug.cgi?id=306372
Summary
REGRESSION (303055@main): Intersection Observer fails with zoomed visual view...
Kiet Ho
Reported
2026-01-27 14:10:26 PST
rdar://168143635
Attachments
Add attachment
proposed patch, testcase, etc.
Kiet Ho
Comment 1
2026-01-27 18:41:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57378
EWS
Comment 2
2026-01-28 21:37:27 PST
Committed
306392@main
(cb868f1b5b52): <
https://commits.webkit.org/306392@main
> Reviewed commits have been landed. Closing PR #57378 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug