Cherry-pick cb868f1b5b52. rdar://169473011

REGRESSION (303055@main): Intersection Observer fails with zoomed visual viewport
    rdar://168143635
    https://bugs.webkit.org/show_bug.cgi?id=306372

    Reviewed by Simon Fraser.

    303055@main removed some calls to RenderView::localToAbsoluteQuad, because those
    requires access to the root's RenderView, which is inaccessible with Site Isolation
    enabled. However, this breaks Intersection Observer with pinch-to-zoom. Pinch-to-zoom
    applies a scaling transform on the RenderView, and localToAbsoluteQuad accounts for
    the transform. This patch temporarily reverts 303055@main while we figure out a
    better solution.

    Test: intersection-observer/zoomed-visual-viewport.html

    * LayoutTests/intersection-observer/zoomed-visual-viewport-expected.txt: Added.
    * LayoutTests/intersection-observer/zoomed-visual-viewport.html: Added.
    * Source/WebCore/page/IntersectionObserver.cpp:
    (WebCore::IntersectionObserver::computeIntersectionState const):

    Canonical link: https://commits.webkit.org/306392@main

Identifier: 305413.257@safari-7624-branch